[project]
name = "hardin"
version = "1.0.0"
description = "AI-powered Linux security configuration auditor"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "reportlab>=4.0",
    "PyPDF2>=3.0",
    "rich>=13.0",
]

[project.scripts]
hardin = "hardin.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
