[project]
name = "pyhardin"
version = "2.0.5"
authors = [
    { name = "Meshari Faisal Alluhaybi", email = "meshari.alluhaybi1@gmail.com" },
]
description = "AI-powered Linux security configuration auditor"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["security", "linux", "audit", "ai", "llm", "configuration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "google-genai>=1.66.0",
    "openai>=2.26.0",
    "reportlab>=4.4.10",
    "PyPDF2>=3.0.1",
    "rich>=14.3.3",
    "pydantic>=2.12.5",
    "certifi>=2026.2.25"
]

[project.urls]
Homepage = "https://github.com/alqinae/pyhardin"
Repository = "https://github.com/alqinae/pyhardin.git"
Documentation = "https://github.com/alqinae/pyhardin#readme"
Issues = "https://github.com/alqinae/pyhardin/issues"

[project.optional-dependencies]
gui = [
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.22",
    "aiofiles>=25.1.0"
]

[project.scripts]
pyhardin = "pyhardin.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyhardin", "pyhardin.*"]

[tool.setuptools.package-data]
"pyhardin.templates" = ["*.html"]
"pyhardin.templates.partials" = ["*.html"]
"pyhardin.static" = ["*.css", "*.ico"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
